feat(api): add get user service
