# api/cmd/gotalk/docs/swagger.json
@@ -13,9 +13,37 @@
                 ],
                 "description": "Create user.",
                 "tags": [
-                    "Auth"
+                    "User"
                 ],
                 "summary": "CreateUser",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/me": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get  current authenticated user.",
+                "tags": [
+                    "User"
+                ],
+                "summary": "GetCurrentUser",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -53,16 +81,17 @@
             "type": "object",
             "required": [
                 "email",
+                "id",
                 "name"
             ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "name": {
+                "id": {
                     "type": "string"
                 },
-                "phone": {
+                "name": {
                     "type": "string"
                 }
             }
